--- a/THANKS
+++ b/THANKS
@@ -3,6 +3,8 @@ bribed me to put their names in here):
 
 (If I missed you, email me)
 
+Art Haas
+
 Jeff Bailey, Tom Lord, A whole pile of people from the ChangeLog,
 Joel N. Weber II, Richard Stallman, Mark E. Davidson, Ted Arm
 Steve Fisk, Kai Getrost, Scott Heavner, Markky Rossi.
