Correct the mailing list administration address.

--- a/FAQ
+++ b/FAQ
@@ -137,7 +137,7 @@ Answers
 17. It's obvious that this application needs my help.  How can I
     participate?
 
-	Send mail to bug-oleo@gnu.org, including the word "subscribe"
+	Send mail to bug-oleo-request@gnu.org, including the word "subscribe"
 	in the subject header, and your email address in the body
 	of the message.  Bug reports and requests for help should be sent
 	to the same address.
