--- a/README
+++ b/README
@@ -35,9 +35,9 @@ Features
 
 As the above list shows, much work needs to be done to get Oleo to fulfill
 its potential utility.  The framework is in place for collaboration and the
-work has begun; to find out more, send a message to bug-oleo@gnu.org, with
-"subscribe" as the only word in the subject line, and your email address in
-the body of the message.  This list is the forum through which developers
+work has begun; to find out more, send a message to bug-oleo-request@gnu.org,
+with "subscribe" as the only word in the subject line, and your email address
+in the body of the message.  This list is the forum through which developers
 confer and keep one another posted about what's happening.  Everyone with an
 interest in the future of this application is encouraged to subscribe.
 
