Some file format fixes; in several places including GUI

--- a/po/en.po
+++ b/po/en.po
@@ -43,6 +43,10 @@ msgstr ""
 "  -f, --ignore-init-file   ignore settings defined in init file\n"
 "  -t, --no-toolkit         disable X toolkit\n"
 "  -x, --nw                 disable graphics and fallback to curses\n"
+"  -s x, --separator x\t   set separator for 'list' file type to x\n"
+"  -S, --space\t\t   set separator for 'list' file type to a space\n"
+"  -F x, --format x\t   set default file type to x (oleo, list, sc  ...)\n"
+"  --filter\t\t   read file from stdin, write to stdout on exit\n"
 "\n"
 "Report bugs to <bug-oleo@gnu.org>.\n"
 
