--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,12 @@
 
+Tue 16 Mar 22:20:43 1999, Danny Backx
+	* Default file format dialog now gets initial values right.
+	* One more bug removed from command line processing. Now
+	  "oleo -s , -F list xx.xx" reads xx.xx with the list format
+	  using a comma as separator.
+	* list.c : remove DOS style line end (CR-LF) when reading
+	  a file.
+
 Sat 13 Mar 15:41:27 1999, Danny Backx
 	* Fix README and FAQ that mentioned a wrong address for
 	  getting subscribed to the bug-oleo mailing list.
