--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 
 Wed 17 Mar 22:21:06 1999, Danny Backx
+	* Motif vs. LessTif issue: need to make sure splashShell has
+	  non-zero geometry in Motif.
 	* Protect against crash when reading CSV file with list
 	  format using default (tab) separator.
 	* Add stuff for Xbase (again). Still crashes big time.
