--- a/TODO
+++ b/TODO
@@ -1,6 +1,12 @@
-$Id: TODO,v 1.19 1999/03/21 16:19:09 danny Exp $
+$Id: TODO,v 1.20 1999/03/21 16:21:03 danny Exp $
 
 TODO's:
+
+* FAQ
+	Clarify build problems relating to
+		C++, xbase
+		plotutils versions
+		plotutils Athena vs. Motif
 
 * Configuration
  	(done) fail on funky options --with-motif --without-Xbae
