--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
-$Id: TODO,v 1.22 1999/03/30 22:16:59 danny Exp $
+$Id: TODO,v 1.23 1999/04/02 07:26:51 danny Exp $
 
 TODO's:
 
@@ -9,6 +9,10 @@ TODO's:
 	(done) Once automake supports it, use Xbase by default.
 
 * Printing
+	(todo) parameterize printing
+	(todo) make printing more intelligent
+	(todo) printing large region shows a scaling bug.
+	       Try printing A1:AZ255.
 	(todo) implement PCL printing (see www.wotsit.org)
 	(todo) improve appearance of PostScript prints
 	(todo) fix precision handling in prints
