--- a/doc/options.texi
+++ b/doc/options.texi
@@ -2,9 +2,9 @@
 @chapter Options
 @cindex Options
 
-@html
+@ifhtml
 <A NAME="HelpOptions">
-@end html
+@end ifhtml
 
 Oleo has various options.  They can be set as a default in the
 @file{.oleorc} file, or using the command @code{M-x set-option}.
