--- a/THANKS
+++ b/THANKS
@@ -1,9 +1,9 @@
 The following people have helped or influenced oleo (Or have simply
 bribed me to put their names in here):
 
-(If I missed you, email me)
+(If I missed you, send email to bug-oleo@gnu.org)
 
-Art Haas
+Art Haas, for several submissions.
 
 Jeff Bailey, Tom Lord, A whole pile of people from the ChangeLog,
 Joel N. Weber II, Richard Stallman, Mark E. Davidson, Ted Arm
